# qkernel

./: .clang-format  .clang-tidy  .cmake-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md
core/: CMakeLists.txt
core/common/: cxx.cc  cxx.h  sys.cc  sys.h
core/containers/: cxx.h  list.h  map.h
core/logger/: escape.h  logger.h
core/macros/: repeat.h
core/math/: math.h
core/memory/: heap.cc  sanitizer.cc  sanitizer.h  stack.cc
core/resource/: url.h
core/strings/: helper.h  string.h
core/types/: templates.h
examples/: 0x02.txt
lib/: CMakeLists.txt
lib/access/: privileges.cc  privileges.h
lib/boot/: multiboot1.h  multiboot2.h
lib/cpu/: cpu.cc  cpu.h  interrupt.cc  interrupt.h  isr.cc  isr.h  scheduler.cc  scheduler.h  task.cc  task.h
lib/disk/: disk.cc  disk.h  f32.cc  f32.h  files.cc  files.h  fs.cc  fs.h  tmpfs.cc  tmpfs.h
lib/elf/: elf.cc  elf.h
lib/memory/: memory.cc  memory.h
lib/ports/: io.cc  io.h
lib/process/: process.cc  process.h
lib/shell/: shell.cc  shell.h
lib/system/: export.cc  export.h  system.cc  system.h
lib/terminal/: terminal.cc  terminal.h
lib/time/: clock.cc  clock.h
services/: CMakeLists.txt
services/cat/: CMakeLists.txt
services/ls/: CMakeLists.txt  main.cc
services/yes/: CMakeLists.txt
src/: CMakeLists.txt
src/aarch64/: start.asm  start.cc
src/boot/: grub.cfg
src/linker/: linker.ld
src/x86/: start.asm
src/x86-64/: start.asm
tools/: chkboot.sh  fmt.sh  mkimage.sh
